@@ -18,7 +18,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -35,68 +34,39 @@ public class ConsultationService {
     private final MemberRepository memberRepository;
 
     /**
-     * 상담 예약 요청
+     * 상담 예약 요청 (고객)
      */
     @Transactional
     public ConsultationResponseDto createConsultation(ConsultationRequestDto requestDto, UUID clientId) {
-        log.info("상담 예약 요청: clientId={}, pbId={}, type={}", clientId, requestDto.getPbId(),
-                requestDto.getConsultationType());
+        log.info("상담 예약 요청: clientId={}, pbId={}, type={}", clientId, requestDto.getConsultationType());
 
         // 고객 정보 조회
         Member client = memberRepository.findById(clientId)
                 .orElseThrow(() -> new IllegalArgumentException("고객 정보를 찾을 수 없습니다"));
 
-        // PB 정보 조회
-        Member pb = memberRepository.findById(UUID.fromString(requestDto.getPbId()))
-                .orElseThrow(() -> new IllegalArgumentException("PB 정보를 찾을 수 없습니다"));
+        UUID pbId = UUID.fromString(requestDto.getPbId());
 
-        // PB 활성 상태 확인
-        if (!pb.isActivePb()) {
-            throw new IllegalStateException("해당 PB는 현재 상담을 받을 수 없습니다");
-        }
+        // PB가 등록한 상담 가능 시간 슬롯 조회
+        LocalDateTime scheduledAt = requestDto.getScheduledAt();
+        Consultation availableSlot = consultationRepository
+                .findByPbIdAndScheduledAtAndStatus(pbId, scheduledAt, ConsultationStatus.AVAILABLE)
+                .orElseThrow(() -> new IllegalStateException("해당 시간은 예약이 불가능하거나 이미 예약된 시간입니다."));
 
-        // 시간 충돌 확인
-        LocalDateTime startTime = requestDto.getScheduledAt();
-        LocalDateTime endTime = startTime
-                .plusMinutes(requestDto.getDurationMinutes() != null ? requestDto.getDurationMinutes()
-                        : requestDto.getConsultationType().getDefaultDurationMinutes());
-
-        List<Consultation> conflictingConsultations = consultationRepository.findConflictingConsultations(pb.getId(),
-                startTime, endTime);
-
-        // 실제 시간 충돌 검사 (상담 시간을 고려한 정확한 충돌 검사)
-        boolean hasConflict = conflictingConsultations.stream().anyMatch(consultation -> {
-            LocalDateTime consultationStart = consultation.getScheduledAt();
-            LocalDateTime consultationEnd = consultationStart.plusMinutes(consultation.getDurationMinutes());
-
-            // 시간 겹침 검사: 새로운 예약이 기존 상담과 겹치는지 확인
-            return !(endTime.isBefore(consultationStart) || startTime.isAfter(consultationEnd));
-        });
-
-        if (hasConflict) {
-            throw new IllegalStateException("해당 시간대에 이미 예약된 상담이 있습니다");
+        // 해당 슬롯이 PB가 본인 일정을 위해 등록한 것인지 확인 (client_id == pb_id)
+        if (!availableSlot.getClient().getId().equals(pbId)) {
+            throw new IllegalStateException("해당 시간은 다른 고객이 이미 예약 진행중입니다.");
         }
 
         // 수수료 설정
         BigDecimal fee = requestDto.getFee() != null ? requestDto.getFee()
                 : BigDecimal.valueOf(requestDto.getConsultationType().getDefaultFee());
 
-        // 상담 예약 생성
-        Consultation consultation = Consultation.builder()
-                .client(client)
-                .pb(pb)
-                .consultationType(requestDto.getConsultationType())
-                .scheduledAt(requestDto.getScheduledAt())
-                .durationMinutes(requestDto.getDurationMinutes() != null ? requestDto.getDurationMinutes()
-                        : requestDto.getConsultationType().getDefaultDurationMinutes())
-                .fee(fee)
-                .clientMessage(requestDto.getClientMessage())
-                .build();
+        // 기존 상담 슬롯에 고객 정보 업데이트 (예약 확정)
+        availableSlot.bookByClient(client, requestDto.getConsultationType(), requestDto.getClientMessage(), fee);
 
-        Consultation savedConsultation = consultationRepository.save(consultation);
-        log.info("상담 예약 생성 완료: consultationId={}", savedConsultation.getId());
+        log.info("상담 예약 완료: consultationId={}", availableSlot.getId());
 
-        return convertToResponseDto(savedConsultation);
+        return convertToResponseDto(availableSlot);
     }
 
     /**
@@ -323,22 +293,24 @@ public class ConsultationService {
 
         // 대기중인 상담
         List<Consultation> pendingConsultations = consultationRepository
-                .findPendingConsultationsByPbId(pbId);
+                .findPendingConsultationsByPbId(pbId, ConsultationStatus.PENDING);
 
         // 진행중인 상담
         List<Consultation> inProgressConsultations = consultationRepository
-                .findInProgressConsultationsByPbId(pbId);
+                .findInProgressConsultationsByPbId(pbId, ConsultationStatus.IN_PROGRESS);
 
         // 최근 상담 (최대 5개)
         Page<Consultation> recentConsultations = consultationRepository
                 .findRecentConsultationsByPbId(pbId, Pageable.ofSize(5));
 
         // 통계 정보
-        long totalCompleted = consultationRepository.countCompletedConsultationsByPbId(pbId);
+        long totalCompleted = consultationRepository.countCompletedConsultationsByPbId(pbId,
+                ConsultationStatus.COMPLETED);
         Double averageRating = consultationRepository.getAverageRatingByPbId(pbId);
 
         // 상담 유형별 통계
-        List<Object[]> typeStats = consultationRepository.getConsultationTypeStatistics(pbId);
+        List<Object[]> typeStats = consultationRepository.getConsultationTypeStatistics(pbId,
+                ConsultationStatus.COMPLETED);
         Map<String, Long> typeStatistics = typeStats.stream()
                 .collect(Collectors.toMap(
                         stat -> ((ConsultationType) stat[0]).getDisplayName(),
@@ -394,7 +366,8 @@ public class ConsultationService {
      * 평가 가능한 상담 목록 조회
      */
     public List<ConsultationResponseDto> getConsultationsForRating(UUID clientId) {
-        List<Consultation> consultations = consultationRepository.findCompletedConsultationsForRating(clientId);
+        List<Consultation> consultations = consultationRepository.findCompletedConsultationsForRating(clientId,
+                ConsultationStatus.COMPLETED);
         return consultations.stream().map(this::convertToResponseDto).toList();
     }
 
@@ -406,41 +379,20 @@ public class ConsultationService {
 
         try {
             UUID pbUuid = UUID.fromString(pbId);
-
-            // 날짜 파싱을 더 안전하게 처리
             LocalDate targetDate = LocalDate.parse(date);
             LocalDateTime startOfDay = targetDate.atStartOfDay();
             LocalDateTime endOfDay = targetDate.plusDays(1).atStartOfDay();
 
-            // 해당 날짜의 예약된 상담 조회 (예약 가능한 시간 계산용)
-            List<Consultation> existingConsultations = consultationRepository
-                    .findBookedConsultationsByPbIdAndScheduledAtBetween(pbUuid, startOfDay, endOfDay);
+            // 해당 날짜에 PB가 AVAILABLE로 등록한 상담 시간 조회
+            List<Consultation> availableSlots = consultationRepository
+                    .findByPbIdAndScheduledAtBetweenAndStatus(pbUuid, startOfDay, endOfDay,
+                            ConsultationStatus.AVAILABLE);
 
-            // 상담 시간을 고려한 가능한 시간 슬롯 생성
-            List<String> allTimeSlots = generateAvailableTimeSlots(durationMinutes);
-
-            // 예약된 시간을 제외한 가능한 시간 목록 생성
-            List<String> availableTimes = allTimeSlots.stream()
-                    .filter(timeSlot -> {
-                        LocalDateTime slotDateTime = LocalDateTime.parse(date + "T" + timeSlot + ":00");
-                        // 상담 시간에 따른 종료 시간
-                        LocalDateTime slotEndTime = slotDateTime.plusMinutes(durationMinutes);
-
-                        return existingConsultations.stream()
-                                .noneMatch(consultation -> {
-                                    LocalDateTime consultationStart = consultation.getScheduledAt();
-                                    LocalDateTime consultationEnd = consultationStart
-                                            .plusMinutes(consultation.getDurationMinutes());
-
-                                    // 시간 겹침 검사: 새로운 예약이 기존 상담과 겹치는지 확인
-                                    return !(slotEndTime.isBefore(consultationStart)
-                                            || slotDateTime.isAfter(consultationEnd));
-                                });
-                    })
-                    .toList();
-
-            log.info("가능한 상담 시간: {}개", availableTimes.size());
-            return availableTimes;
+            return availableSlots.stream()
+                    // PB 본인이 클라이언트로 등록된 슬롯만 필터링
+                    .filter(slot -> slot.getClient().getId().equals(slot.getPb().getId()))
+                    .map(consultation -> consultation.getScheduledAt().toLocalTime().toString())
+                    .collect(Collectors.toList());
 
         } catch (Exception e) {
             log.error("가능한 상담 시간 조회 실패", e);
@@ -456,112 +408,20 @@ public class ConsultationService {
 
         try {
             UUID pbUuid = UUID.fromString(pbId);
-
-            // 날짜 파싱을 더 안전하게 처리
             LocalDate targetDate = LocalDate.parse(date);
             LocalDateTime startOfDay = targetDate.atStartOfDay();
             LocalDateTime endOfDay = targetDate.plusDays(1).atStartOfDay();
 
-            log.info("날짜 파싱 결과: targetDate={}, startOfDay={}, endOfDay={}", targetDate, startOfDay, endOfDay);
-            log.info("조회 조건: pbId={}, targetDate={}, startOfDay={}, endOfDay={}", pbUuid, targetDate, startOfDay,
-                    endOfDay);
+            // 해당 날짜에 PB가 등록한 모든 상담 시간 조회 (예약된 것 포함)
+            List<Consultation> allSlots = consultationRepository
+                    .findByPbIdAndScheduledAtBetween(pbUuid, startOfDay, endOfDay);
 
-            // 디버깅: 해당 PB의 모든 상담 조회 (날짜 제한 없이)
-            List<Consultation> allConsultations = consultationRepository.findByPbId(pbUuid, Pageable.unpaged())
-                    .getContent();
-            log.info("해당 PB의 전체 상담 수: {}개", allConsultations.size());
-            for (Consultation consultation : allConsultations) {
-                log.info("전체 상담: ID={}, 시간={}, 지속시간={}분, 상태={}",
-                        consultation.getId(),
-                        consultation.getScheduledAt(),
-                        consultation.getDurationMinutes(),
-                        consultation.getStatus());
-            }
-
-            // 해당 날짜의 예약된 상담 조회 (예약 가능한 시간 계산용)
-            List<Consultation> existingConsultations = consultationRepository
-                    .findBookedConsultationsByPbIdAndScheduledAtBetween(pbUuid, startOfDay, endOfDay);
-
-            log.info("조회된 기존 상담 수: {}개", existingConsultations.size());
-
-            // 디버깅: 날짜 범위 내의 상담을 수동으로 필터링해서 확인
-            List<Consultation> manualFiltered = allConsultations.stream()
-                    .filter(c -> c.getStatus().name().matches("PENDING|APPROVED|IN_PROGRESS"))
-                    .filter(c -> {
-                        LocalDate consultationDate = c.getScheduledAt().toLocalDate();
-                        return consultationDate.equals(targetDate);
-                    })
-                    .collect(Collectors.toList());
-
-            log.info("수동 필터링된 상담 수: {}개", manualFiltered.size());
-            for (Consultation consultation : manualFiltered) {
-                log.info("수동 필터링 상담: ID={}, 시간={}, 날짜={}, 지속시간={}분, 상태={}",
-                        consultation.getId(),
-                        consultation.getScheduledAt(),
-                        consultation.getScheduledAt().toLocalDate(),
-                        consultation.getDurationMinutes(),
-                        consultation.getStatus());
-            }
-            for (Consultation consultation : existingConsultations) {
-                log.info("기존 상담: ID={}, 시간={}, 날짜={}, 지속시간={}분, 상태={}",
-                        consultation.getId(),
-                        consultation.getScheduledAt(),
-                        consultation.getScheduledAt().toLocalDate(),
-                        consultation.getDurationMinutes(),
-                        consultation.getStatus());
-            }
-
-            // 상담 시간을 고려한 가능한 시간 슬롯 생성
-            List<String> allTimeSlots = generateAvailableTimeSlots(durationMinutes);
-
-            // 수동 필터링된 상담을 사용하여 시간 슬롯 상태 계산
-            List<Consultation> consultationsToCheck = manualFiltered.isEmpty() ? existingConsultations : manualFiltered;
-
-            // 각 시간 슬롯의 예약 가능 여부 확인
-            Map<String, Boolean> timeSlotsStatus = new HashMap<>();
-
-            for (String timeSlot : allTimeSlots) {
-                LocalDateTime slotDateTime = LocalDateTime.parse(date + "T" + timeSlot + ":00");
-                LocalDateTime slotEndTime = slotDateTime.plusMinutes(durationMinutes); // 상담 시간에 따른 종료 시간
-
-                // 1. 상담 시간을 고려한 퇴근 시간 체크 (18시를 넘으면 비활성화)
-                boolean exceedsWorkingHours = slotEndTime.isAfter(LocalDateTime.parse(date + "T18:00:00"));
-
-                // 2. 기존 예약과의 충돌 체크
-                boolean hasConflict = consultationsToCheck.stream()
-                        .anyMatch(consultation -> {
-                            LocalDateTime consultationStart = consultation.getScheduledAt();
-                            LocalDateTime consultationEnd = consultationStart
-                                    .plusMinutes(consultation.getDurationMinutes());
-
-                            // 시간 겹침 검사: 두 시간대가 겹치는지 확인
-                            // 겹치는 조건: slotStart < consultationEnd && slotEnd > consultationStart
-                            boolean hasOverlap = slotDateTime.isBefore(consultationEnd)
-                                    && slotEndTime.isAfter(consultationStart);
-
-                            log.debug("시간 충돌 검사: slot={}-{}, consultation={}-{}, overlap={}",
-                                    slotDateTime, slotEndTime, consultationStart, consultationEnd, hasOverlap);
-
-                            return hasOverlap;
-                        });
-
-                // 퇴근 시간 초과 또는 기존 예약과 충돌하면 비활성화
-                boolean isAvailable = !exceedsWorkingHours && !hasConflict;
-
-                timeSlotsStatus.put(timeSlot, isAvailable);
-
-                // 디버깅을 위한 로그
-                if (!isAvailable) {
-                    if (exceedsWorkingHours) {
-                        log.info("시간 슬롯 {} 예약 불가: 퇴근 시간 초과 (종료시간: {})", timeSlot, slotEndTime);
-                    } else if (hasConflict) {
-                        log.info("시간 슬롯 {} 예약 불가: 기존 상담과 충돌", timeSlot);
-                    }
-                }
-            }
-
-            log.info("시간 슬롯 상태 조회 완료: {}개 슬롯", timeSlotsStatus.size());
-            return timeSlotsStatus;
+            return allSlots.stream()
+                    .collect(Collectors.toMap(
+                            consultation -> consultation.getScheduledAt().toLocalTime().toString(),
+                            // PB 본인이 클라이언트로 등록되어 있고, 상태가 AVAILABLE인 경우만 true
+                            consultation -> consultation.getStatus() == ConsultationStatus.AVAILABLE &&
+                                    consultation.getClient().getId().equals(consultation.getPb().getId())));
 
         } catch (Exception e) {
             log.error("시간 슬롯 상태 조회 실패", e);
@@ -587,10 +447,10 @@ public class ConsultationService {
     private ConsultationResponseDto convertToResponseDto(Consultation consultation) {
         return ConsultationResponseDto.builder()
                 .id(consultation.getId())
-                .clientId(consultation.getClient().getId().toString())
-                .clientName(consultation.getClient().getName())
-                .clientPhone(consultation.getClient().getPhone())
-                .clientEmail(consultation.getClient().getEmail())
+                .clientId(consultation.getClient() != null ? consultation.getClient().getId().toString() : null)
+                .clientName(consultation.getClient() != null ? consultation.getClient().getName() : null)
+                .clientPhone(consultation.getClient() != null ? consultation.getClient().getPhone() : null)
+                .clientEmail(consultation.getClient() != null ? consultation.getClient().getEmail() : null)
                 .pbId(consultation.getPb().getId().toString())
                 .pbName(consultation.getPb().getName())
                 .pbPhone(consultation.getPb().getPhone())
@@ -626,7 +486,7 @@ public class ConsultationService {
     private ConsultationSummaryDto convertToSummaryDto(Consultation consultation) {
         return ConsultationSummaryDto.builder()
                 .id(consultation.getId())
-                .clientName(consultation.getClient().getName())
+                .clientName(consultation.getClient() != null ? consultation.getClient().getName() : "미정")
                 .pbName(consultation.getPb().getName())
                 .consultationType(consultation.getConsultationType())
                 .status(consultation.getStatus())
@@ -637,33 +497,13 @@ public class ConsultationService {
                 .isCancelled(consultation.isCancelled())
                 .createdAt(consultation.getCreatedAt())
                 .statusDisplayName(consultation.getStatus().getDisplayName())
-                .typeDisplayName(consultation.getConsultationType().getDisplayName())
+                .typeDisplayName(
+                        consultation.getConsultationType() != null ? consultation.getConsultationType().getDisplayName()
+                                : "미정")
                 .canBeCancelled(consultation.canBeCancelled())
                 .canBeStarted(consultation.canBeStarted())
                 .canBeEnded(consultation.canBeEnded())
                 .build();
-    }
-
-    /**
-     * 상담 시간을 고려한 시간 슬롯 생성 (모든 시간 슬롯 + 상태)
-     */
-    private List<String> generateAvailableTimeSlots(Integer durationMinutes) {
-        List<String> timeSlots = new ArrayList<>();
-
-        // 9시부터 18시까지 30분 단위로 모든 시간 생성
-        for (int hour = 9; hour < 18; hour++) {
-            for (int minute = 0; minute < 60; minute += 30) {
-                String timeSlot = String.format("%02d:%02d", hour, minute);
-                timeSlots.add(timeSlot);
-            }
-        }
-
-        // 시간 순서대로 정렬
-        timeSlots.sort(String::compareTo);
-
-        log.info("생성된 시간 슬롯 (durationMinutes={}): {}", durationMinutes, timeSlots);
-
-        return timeSlots;
     }
 
     // WebSocket용 메서드들 추가
